--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,16 @@
-body {
-    font-family: 'Arial', sans-serif;
+/* Stile base per l'intero sito */
+body, html {
+    height: 100%;
     margin: 0;
-    padding: 0;
-    background-color: #f0f2f5;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     color: #333;
+    background-color: #f0f2f5;
 }
 
 header {
     background-color: #282c34;
     color: white;
-    padding: 10px 20px;
+    padding: 20px 10%;
     text-align: center;
 }
 
@@ -20,32 +21,76 @@ nav ul {
 
 nav ul li {
     display: inline;
-    margin-right: 10px;
+    margin-right: 20px;
 }
 
 nav ul li a {
     color: white;
     text-decoration: none;
+    font-size: 16px;
 }
 
 main {
-    padding: 20px;
     text-align: center;
+    padding: 50px 10%;
+    background: white;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin: 20px auto;
+    max-width: 800px; /* Limita la larghezza del contenuto principale */
 }
 
 footer {
     background-color: #282c34;
     color: white;
     text-align: center;
-    padding: 10px 20px;
+    padding: 10px;
     position: fixed;
     bottom: 0;
     width: 100%;
 }
 
+/* Stile specifico per la pagina About Me */
 .about-background {
     background: url('images/space-background.jpg') no-repeat center center fixed;
     background-size: cover;
     color: #f0f0f0;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+/* Effetti al passaggio del mouse */
+nav ul li a:hover, footer a:hover {
+    text-decoration: underline;
+}
+
+/* Sezioni e titoli */
+h1, h2 {
+    font-weight: normal;
+}
+
+section {
+    margin-bottom: 40px;
+}
+
+/* Link in evidenza */
+a {
+    color: #0077cc; /* Blu per i link standard */
+}
+
+a:hover {
+    color: #005699; /* Blu più scuro per l'hover */
+}
+
+/* Responsive design per piccoli schermi */
+@media (max-width: 600px) {
+    header, main, footer {
+        padding: 20px;
+    }
+
+    nav ul {
+        text-align: center;
+    }
+
+    nav ul li {
+        display: block;
+        margin-bottom: 10px;
+    }
 }
