--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,29 @@
-/* Stile base per l'intero sito */
+/* Base styles and common elements */
 body, html {
     height: 100%;
     margin: 0;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    color: #333;
+    padding: 0;
+    font-family: 'Arial', sans-serif;
     background-color: #f0f2f5;
+    color: #333;
 }
 
 header {
     background-color: #282c34;
     color: white;
-    padding: 20px 10%;
+    padding: 10px 5%;
     text-align: center;
 }
 
 nav ul {
     list-style-type: none;
     padding: 0;
+    text-align: center;
 }
 
 nav ul li {
     display: inline;
-    margin-right: 20px;
+    margin: 0 10px;
 }
 
 nav ul li a {
@@ -31,12 +33,12 @@ nav ul li a {
 }
 
 main {
-    text-align: center;
-    padding: 50px 10%;
-    background: white;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    text-align: left;
+    padding: 20px 5%;
+    background: #ffffff;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     margin: 20px auto;
-    max-width: 800px; /* Limita la larghezza del contenuto principale */
+    max-width: 960px;
 }
 
 footer {
@@ -49,48 +51,50 @@ footer {
     width: 100%;
 }
 
-/* Stile specifico per la pagina About Me */
-.about-background {
-    background: url('images/space-background.jpg') no-repeat center center fixed;
-    background-size: cover;
-    color: #f0f0f0;
+.gallery img {
+    width: 33%; /* Display three images side by side */
+    height: auto;
+    padding: 5px;
 }
 
-/* Effetti al passaggio del mouse */
-nav ul li a:hover, footer a:hover {
-    text-decoration: underline;
+.gallery {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
-/* Sezioni e titoli */
-h1, h2 {
-    font-weight: normal;
+#electric-propulsion, #cad-model {
+    background: rgba(255, 255, 255, 0.8);
+    margin: 20px;
+    padding: 20px;
+    border-radius: 10px;
 }
 
-section {
-    margin-bottom: 40px;
+h2 {
+    color: #004d99; /* Dark blue for section titles */
 }
 
-/* Link in evidenza */
-a {
-    color: #0077cc; /* Blu per i link standard */
+ul {
+    padding-left: 20px;
 }
 
-a:hover {
-    color: #005699; /* Blu più scuro per l'hover */
+li {
+    margin-bottom: 10px;
 }
 
-/* Responsive design per piccoli schermi */
-@media (max-width: 600px) {
-    header, main, footer {
-        padding: 20px;
+/* Responsive design for small screens */
+@media (max-width: 768px) {
+    header, footer, main {
+        padding: 10px;
     }
 
     nav ul {
-        text-align: center;
+        font-size: 14px;
     }
 
     nav ul li {
         display: block;
-        margin-bottom: 10px;
+        margin: 5px 0;
     }
 }
